add gpu support for java jobclient